--- a/index.htm
+++ b/index.htm
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>cookie-stand</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Ranchers&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
+    <title>cookie-stand</title>
 </head>
 <body>
     <header>
-        <h1>cookie-stand</h1>
+        <h1>Pat's cookie-stand</h1>
     </header>
     <main>
-        <h2>cookie-stand for sale</h2>
-        <a>
-            <img src="./images/salmon.png" alt="salmon">
-        </a>
-        <a href="./sales.html">sales</a>
+        <img src="./images/salmon.png" alt="salmon">
+        <a href="./sales.html">mountOfSales</a>
     </main>
     <footer>
-        <script src="./js/object.js"></script>
-        <script src="./js/app.js"></script>
     </footer>
-    
+    <script src="./js/app.js"></script>
 </body>
 </html>
