--- a/index.htm
+++ b/index.htm
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Ranchers&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&family=Train+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Abel&family=Raleway:wght@600&family=Train+One&display=swap" rel="stylesheet">  
+
+    
     <title>cookie-stand</title>
 </head>
 <body>
@@ -11,10 +16,37 @@
         <h1>Pat's cookie-stand</h1>
     </header>
     <main>
-        <img src="./images/salmon.png" alt="salmon">
-        <a href="./sales.html">mountOfSales</a>
+        <section>
+            <h2>OUR LOCATIONS</h2>
+            <ul>
+                <li>Seattle</li>
+                <li>Tokyo</li>
+                <li>Dubai</li>
+                <li>Paris</li>
+                <li>Lima</li>
+            </ul>
+            <br>
+            <p>for contact please call: 00-0000-0000</p>
+            <br>
+            <a href="./sales.html">mountOfSales</a>
+        </section>
+        <br>
+        <img id="salmon" src="./images/salmon.png" alt="salmon" class="center">
+        <br>
+        <img src="./images/chinook.jpg" alt="" class="center">
+        <br>
+        <img src="./images/cutter.jpeg" alt="" class="center">
+        <br>
+        <img src="./images/fish.jpg" alt="" class="center">
+        <br>
+        <img src="./images/frosted-cookie.jpg" alt="" class="center">
+        <br>
+        <img src="./images/shirt.jpg" alt="" class="center">
+        <br>
+        <img src="./images/family.jpg" alt="" class="center">
     </main>
     <footer>
+        &copy; Pat's Cookie-stand
     </footer>
     <script src="./js/app.js"></script>
 </body>
