--- a/sales.html
+++ b/sales.html
@@ -9,9 +9,11 @@
 <body>
     <header>
         <h1>Pat's Salamon Store - Amount of Sales</h1>
+        <a href="./index.htm">HomePage</a>
     </header>
     <main>
         <section id="select"> </section>
+        <section id="parent"> </section>
     </main>
     <footer></footer>
     <script src="./js/app.js"></script>
