only add a sales form

--- a/index.htm
+++ b/index.htm
@@ -28,7 +28,7 @@
             <br>
             <p>for contact please call: 00-0000-0000</p>
             <br>
-            <a href="./sales.html">mountOfSales</a>
+            <a href="./sales.html">amountOfSales</a>
         </section>
         <br>
         <img id="salmon" src="./images/salmon.png" alt="salmon" class="center">
