--- a/sales.html
+++ b/sales.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Ranchers&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
     <title>SalesPage</title>
 </head>
 <body>
@@ -14,6 +11,29 @@
     <main>
         <section id="select"> </section>
         <section id="parent"> </section>
+        <h1>Add A NEW BRANCH DATA</h1>
+        <form action="">
+            <fieldset>
+                <legend>add a new barnch/sales's data</legend>
+                <label for="location"> Branch Location :</label>
+                <input type="text">
+                <br>
+                <br>
+                <label for="minCustmor"> Min.Custmor : </label>
+                <input type="text">
+                <br>
+                <br>
+                <label for="maxCustmor"> Max.Custmor : </label>
+                <input type="text">
+                <br>
+                <br>
+                <label for="avgSales"> Avg.Sales : </label>
+                <input type="text">
+                <br>
+                <br>
+                <input type="submit">
+            </fieldset>
+        </form>
     </main>
     <footer></footer>
     <script src="./js/app.js"></script>
