try to fix table

--- a/sales.html
+++ b/sales.html
@@ -10,7 +10,7 @@
     </header>
     <main>
         <section id="select"> </section>
-        <section id="parent"> </section>
+        <section id="sTable"> </section>
         <h1>Add A NEW BRANCH DATA</h1>
         <form action="">
             <fieldset>
